--- a/mywebsite/D+ App Icon.html
+++ b/mywebsite/D+ App Icon.html
@@ -16,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type=text/css href="default.css">
+    <link id="theme-style" rel="stylesheet" type="text/css" href="default.css">
+
 </head>
 
 <body>
