--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         appreciate and benefit from.</p>
                     <hr>
 
-                    <h4>TOP EXPERTISE</h4>
+                    <h4>Future Career I would like to get into</h4>
 
                     <!--To link my resume so on click, it will show my pdf-->
                     <p>Ui/UX Web Designer:<a href="Resume.pdf">Download Resume</a></p>
