--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
 </body>
 
 </html>
