--- a/School.html
+++ b/School.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type=text/css href="default.css">
+    <link rel="stylesheet" type=text/css href="styles/default.css">
 
 </head>
 
