--- a/School.html
+++ b/School.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Post Name</title>
+    <title>Aaron's School</title>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
