--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type=text/css href="styles/default.css">
-    <link id="theme-style" rel="stylesheet" type="text/css" href="styles/default.css">
+    <link rel="stylesheet" type=text/css href="default.css">
+    <link id="theme-style" rel="stylesheet" type="text/css" href="default.css">
 </head>
 
 <!--start of the main page-->
@@ -208,7 +208,7 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
