--- a/School.html
+++ b/School.html
@@ -20,29 +20,61 @@
 </head>
 
 <body>
-    <div class="nav-wrapper">
-        <!-- Link around dots-wrapper added after tutorial video -->
-        <a href="index.html">
-            <div class="dots-wrapper">
-                <div id="dot1" class="browser-dot"></div>
-                <div id="dot2" class="browser-dot"></div>
-                <div id="dot3" class="browser-dot"></div>
+    <section class="s1">
+        <div class="nav-wrapper">
+            <!-- Link around dots-wrapper added after tutorial video -->
+            <a href="index.html">
+                <div class="dots-wrapper">
+                    <div id="dot1" class="browser-dot"></div>
+                    <div id="dot2" class="browser-dot"></div>
+                    <div id="dot3" class="browser-dot"></div>
+                </div>
+
+                <!--details on the top right to link to other pages later on-->
+                <ul id="navigation">
+                    <li><a href="index.html">About-Me</a></li>
+                    <li><a href="School.html">School</a></li>
+                    <li><a href="Achievements.html">Achievements</a></li>
+                    <li><a href="Community.html">Community</a></li>
+                    <li><a href="Hobbies.html">Hobbies</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+        </div>
+
+        <div class="main-container">
+            <h3>School</h3>
+        </div>
+
+        <div class="left-column">
+            <img id="profile_pic" src="images/candid pic.jpg">
+            <h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
+
+            <!--creating the website color changing dots-->
+            <div id="theme-options-wrapper">
+                <div data-mode="light" id="light-mode" class="theme-dot"></div>
+                <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
+                <div data-mode="green" id="green-mode" class="theme-dot"></div>
+                <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
             </div>
 
-            <!--details on the top right to link to other pages later on-->
-            <ul id="navigation">
-                <li><a href="index.html">About-Me</a></li>
-                <li><a href="School.html">School</a></li>
-                <li><a href="Achievements.html">Achievements</a></li>
-                <li><a href="Community.html">Community</a></li>
-                <li><a href="Hobbies.html">Hobbies</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </ul>
-    </div>
+            <p id="settings-note">Theme settings will be saved for<br>your next visit</p>
+        </div>
 
-    <div class="main-container">
-        <h3>School</h3>
-    </div>
+        <!--right column holding the info about the question - what drives me?-->
+        <div class="right-column">
+
+            <div id="preview-shadow">
+                <div id="preview">
+                    <div id="corner-tl" class="corner"></div>
+                    <div id="corner-tr" class="corner"></div>
+                    <h3>What Drives Me?</h3>
+                    <p>My goal is to use technology to improve our lives.</p>
+                    <div id="corner-br" class="corner"></div>
+                    <div id="corner-bl" class="corner"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
