--- a/Achievements.html
+++ b/Achievements.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type=text/css href="styles/default.css">
+    <link rel="stylesheet" type=text/css href="default.css">
 </head>
 
 <body>
@@ -36,6 +36,7 @@
                 <li><a href="Community.html">Community</a></li>
                 <li><a href="Hobbies.html">Hobbies</a></li>
                 <li><a href="Contact.html">Contact</a></li>
+                <li><a href="index.html#contact">Get-in-Touch</a></li>
             </ul>
     </div>
 
