--- a/D+ App Icon.html
+++ b/D+ App Icon.html
@@ -37,6 +37,8 @@
                 <li><a href="Community.html">Community</a></li>
                 <li><a href="Hobbies.html">Hobbies</a></li>
                 <li><a href="Contact.html">Contact</a></li>
+                <li><a href="index.html#contact">Get-in-Touch</a></li>
+
             </ul>
     </div>
 
