--- a/School.html
+++ b/School.html
@@ -17,64 +17,124 @@
 
     <link rel="stylesheet" type=text/css href="default.css">
 
+    <style type="text/css">
+        .img-container {
+            max-width: 800px;
+        }
+        
+        .img-sch {
+            max-width: 200px;
+        }
+        
+        img {
+            width: 100%
+        }
+    </style>
+
 </head>
 
 <body>
-    <section class="s1">
-        <div class="nav-wrapper">
-            <!-- Link around dots-wrapper added after tutorial video -->
-            <a href="index.html">
-                <div class="dots-wrapper">
-                    <div id="dot1" class="browser-dot"></div>
-                    <div id="dot2" class="browser-dot"></div>
-                    <div id="dot3" class="browser-dot"></div>
-                </div>
-
-                <!--details on the top right to link to other pages later on-->
-                <ul id="navigation">
-                    <li><a href="index.html">About-Me</a></li>
-                    <li><a href="School.html">School</a></li>
-                    <li><a href="Achievements.html">Achievements</a></li>
-                    <li><a href="Community.html">Community</a></li>
-                    <li><a href="Hobbies.html">Hobbies</a></li>
-                    <li><a href="Contact.html">Contact</a></li>
-                </ul>
-        </div>
-
-        <div class="main-container">
-            <h3>School</h3>
-        </div>
-
-        <div class="left-column">
-            <img id="profile_pic" src="images/candid pic.jpg">
-            <h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
-
-            <!--creating the website color changing dots-->
-            <div id="theme-options-wrapper">
-                <div data-mode="light" id="light-mode" class="theme-dot"></div>
-                <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
-                <div data-mode="green" id="green-mode" class="theme-dot"></div>
-                <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
+    <div class="nav-wrapper">
+        <!-- Link around dots-wrapper added after tutorial video -->
+        <a href="index.html">
+            <div class="dots-wrapper">
+                <div id="dot1" class="browser-dot"></div>
+                <div id="dot2" class="browser-dot"></div>
+                <div id="dot3" class="browser-dot"></div>
             </div>
 
-            <p id="settings-note">Theme settings will be saved for<br>your next visit</p>
+            <!--details on the top right to link to other pages later on-->
+            <ul id="navigation">
+                <li><a href="index.html">About-Me</a></li>
+                <li><a href="School.html">School</a></li>
+                <li><a href="Achievements.html">Achievements</a></li>
+                <li><a href="Community.html">Community</a></li>
+                <li><a href="Hobbies.html">Hobbies</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="index.html#contact">Get-in-Touch</a></li>
+            </ul>
+    </div>
+
+    <div class="main-container">
+
+        <br>
+        <div class="img-container">
+            <img src="school info/schoolquote.jpg">
+        </div>
+        <h3>Schools that I have gone to!</h3>
+
+        <ol>
+            <li><strong>Balestier Hill Primary School</strong></li>
+            <p>(P1-P3 mid term)</p>
+
+            <li><strong>Ang Mo Kio Primary School</strong></li>
+            <p>(Graduated with PSLE score of 128.)</p>
+
+            <li><strong>Mayflower Secondary School</strong></li>
+            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
+
+            <li><strong>Nitec in Infocomm Technology</strong></li>
+            <p>(Graduated as top student and valedictorian of my cohort) </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.1 Common ICT Program </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.2 onwards Immersive Media</p>
+        </ol>
+
+        <br>
+
+        <h5>Balestier Hill Primary School</h5>
+        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
+        <div class="img-sch">
+            <a href="https://bendemeerpri.moe.edu.sg/">
+                <img src="school info/bhps.png">
+                <p>Click on the image to visit the school website!</p>
+            </a>
         </div>
 
-        <!--right column holding the info about the question - what drives me?-->
-        <div class="right-column">
+        <br>
 
-            <div id="preview-shadow">
-                <div id="preview">
-                    <div id="corner-tl" class="corner"></div>
-                    <div id="corner-tr" class="corner"></div>
-                    <h3>What Drives Me?</h3>
-                    <p>My goal is to use technology to improve our lives.</p>
-                    <div id="corner-br" class="corner"></div>
-                    <div id="corner-bl" class="corner"></div>
-                </div>
-            </div>
+        <h5>Ang Mo Kio Primary School</h5>
+        <div class="img-sch">
+            <a href="https://angmokiopri.moe.edu.sg/">
+                <img src="school info/AMKPS Logo.jpg">
+                <p>Click on the image to visit the school website!</p>
+            </a>
         </div>
-    </section>
+
+        <br>
+
+        <h5>Mayflower Secondary School </h5>
+        <div class="img-sch">
+            <a href="https://mayflowersec.moe.edu.sg/">
+                <img src="school info/mfss.jpg">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+        <br>
+
+        <h5>ITE College Central - Nitec in Infocomm Technology</h5>
+        <div class="img-sch">
+            <a href="https://www.ite.edu.sg/colleges/ite-college-central/about-college-central">
+                <img src="school info/ite.jfif">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+        <br>
+
+        <h5>Ngee Ann Poly</h5>
+        <div class="img-sch">
+            <a href="https://www.np.edu.sg/Pages/default.aspx?view=www">
+                <img src="school info/Ngee_Ann_Polytechnic_logo.svg.png">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+    </div>
 
 </body>
 
