--- a/Achievements.html
+++ b/Achievements.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Post Name</title>
+    <title>Aaron's Achievements</title>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -16,6 +16,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type=text/css href="default.css">
+
+    <style type="text/css">
+        .img-container {
+            max-width: 800px;
+        }
+        
+        .img-sch {
+            max-width: 200px;
+        }
+        
+        img {
+            width: 100%
+        }
+    </style>
+
 </head>
 
 <body>
@@ -41,7 +56,82 @@
     </div>
 
     <div class="main-container">
-        <h3>Achievement</h3>
+
+        <br>
+
+        <h3>Achievements</h3>
+
+        <ul>
+            <li><strong>MayFlower Secondary School</strong></li>
+            <p>Mayflowerian of The Year 2019, and Outstanding Academic Award 2019</p>
+
+            <li><strong>Institue of Technical Education</strong></li>
+            <p>(Graduated with PSLE score of 128.)</p>
+
+            <li><strong>Mayflower Secondary School</strong></li>
+            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
+
+            <li><strong>Nitec in Infocomm Technology</strong></li>
+            <p>(Graduated as top student and valedictorian of my cohort) </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.1 Common ICT Program </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.2 onwards Immersive Media</p>
+        </ul>
+
+        <br>
+
+        <h5>Balestier Hill Primary School</h5>
+        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
+        <div class="img-sch">
+            <a href="https://bendemeerpri.moe.edu.sg/">
+                <img src="school info/bhps.png">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+        <br>
+
+        <h5>Ang Mo Kio Primary School</h5>
+        <div class="img-sch">
+            <a href="https://angmokiopri.moe.edu.sg/">
+                <img src="school info/AMKPS Logo.jpg">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+        <br>
+
+        <h5>Mayflower Secondary School </h5>
+        <div class="img-sch">
+            <a href="https://mayflowersec.moe.edu.sg/">
+                <img src="school info/mfss.jpg">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+        <br>
+
+        <h5>ITE College Central - Nitec in Infocomm Technology</h5>
+        <div class="img-sch">
+            <a href="https://www.ite.edu.sg/colleges/ite-college-central/about-college-central">
+                <img src="school info/ite.jfif">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
+        <br>
+
+        <h5>Ngee Ann Poly</h5>
+        <div class="img-sch">
+            <a href="https://www.np.edu.sg/Pages/default.aspx?view=www">
+                <img src="school info/Ngee_Ann_Polytechnic_logo.svg.png">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
+
     </div>
 
 </body>
