--- a/School.html
+++ b/School.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Aaron's School</title>
+    <title>Aaron's list of Schools</title>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -58,9 +58,7 @@
     <div class="main-container">
 
         <br>
-        <div class="img-container">
-            <img src="school info/schoolquote.jpg">
-        </div>
+
         <h3>Schools that I have gone to!</h3>
 
         <ol>
