--- a/Achievements.html
+++ b/Achievements.html
@@ -27,7 +27,7 @@
         }
         
         img {
-            width: 100%
+            width: 300%
         }
     </style>
 
@@ -61,75 +61,126 @@
 
         <h3>Achievements</h3>
 
-        <ul>
+        <ol>
             <li><strong>MayFlower Secondary School</strong></li>
-            <p>Mayflowerian of The Year 2019, and Outstanding Academic Award 2019</p>
+            <p>Mayflowerian of The Year 2019</p>
+            <p>Outstanding Academic Award 2019</p>
+
+            <br>
 
             <li><strong>Institue of Technical Education</strong></li>
-            <p>(Graduated with PSLE score of 128.)</p>
-
-            <li><strong>Mayflower Secondary School</strong></li>
-            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
-
-            <li><strong>Nitec in Infocomm Technology</strong></li>
-            <p>(Graduated as top student and valedictorian of my cohort) </p>
-
-            <li><strong>Ngee Ann Poly</strong></li>
-            <p>SEM 1.1 Common ICT Program </p>
-
-            <li><strong>Ngee Ann Poly</strong></li>
-            <p>SEM 1.2 onwards Immersive Media</p>
-        </ul>
+            <p>Graduated with a 4.0 GPA</p>
+            <p>Elected to be President for ITE College Central Student Council (From November 2019- November 2020)</p>
+            <p>Director List for Academic Year 19/20 </p>
+            <p>Received Lee Kuan Yew Scholarship To Encourage Progression (LKY-STEP)</p>
+            <p>Received Chip Eng Seng Study Grant</p>
+            <p>Awarded Lee Kuan Yew Model Student/Trainee Award</p>
+            <p>Awarded ITE Outstanding Graduate Award (School of Electronics and Info-Comm Technology)</p>
+            <p>Awarded ITE Top Graduate Award (School of Electronics and Info-Comm Technology)</p>
+            <p>Awarded Harvard Prize Book (Singapore) 2020/21</p>
+            <p>Awarded Yio Chu Kang Youth Community Leadership Award</p>
+        </ol>
 
         <br>
 
-        <h5>Balestier Hill Primary School</h5>
-        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
+        <h5>Mayflowerian of The Year 2019</h5>
+        <p>Valedictorian of my year 2018. I was the first normal technical student in my school to receive this award.</p>
         <div class="img-sch">
-            <a href="https://bendemeerpri.moe.edu.sg/">
-                <img src="school info/bhps.png">
-                <p>Click on the image to visit the school website!</p>
+            <a href="https://www.facebook.com/mayflowersecofficial/photos/1073240672882454">
+                <img src="achievements info/mayflowerian of the year award.jpeg">
+                <p>Click on the image to visit the school Facebook page!</p>
+
+            </a>
+        </div>
+
+
+        <br>
+
+        <h5>Outstanding Academic Award 2019</h5>
+        <div class="img-sch">
+            <a href="https://www.instagram.com/p/B1sVuYCnbdq/?utm_source=ig_web_copy_link">
+                <img src="achievements info/topstudentforntlevel.jpeg">
+                <p>Click on the image to visit the school Instagram post for the speech day 2019!</p>
+
             </a>
         </div>
 
         <br>
 
-        <h5>Ang Mo Kio Primary School</h5>
+        <h5>Elected to be President for ITE College Central Student Council (From November 2019- November 2020)</h5>
         <div class="img-sch">
-            <a href="https://angmokiopri.moe.edu.sg/">
-                <img src="school info/AMKPS Logo.jpg">
-                <p>Click on the image to visit the school website!</p>
+            <a href="https://www.instagram.com/p/B8aWHJMnVOP/?utm_source=ig_web_copy_link">
+                <img src="achievements info/iteccscpresident.jpg">
+                <p>Click on the image above to visit the instagram page!</p>
+
+            </a>
+        </div>
+        <a href="https://www.instagram.com/tv/CH5SriMh6Ui/?utm_source=ig_web_copy_link">
+            <p>Click on the link to watch a summary of my team and I journey</p>
+            <p>https://www.instagram.com/tv/CH5SriMh6Ui/?utm_source=ig_web_copy_link</p>
+        </a>
+
+
+        <br>
+
+        <h5>Awarded Lee Kuan Yew Model Student/Trainee Award</h5>
+        <div class="img-sch">
+            <a href="https://www.instagram.com/p/CPPXIyVB0te/?utm_source=ig_web_copy_link">
+                <img src="achievements info/lkymstawardpic.PNG">
+                <p>Click on the image to visit the instagram page!</p>
+            </a>
+        </div>
+        <a href="https://www.ite.edu.sg/docs/default-source/newsroom-docs/news-release_w_annex---ite-student-achievers-awards-2021.pdf?sfvrsn=874891c2_3">
+            <p>Click on the link to read a pdf review for ITE Student Achievers’ Awards 2021</p>
+            <p>https://www.ite.edu.sg/docs/default-source/newsroom-docs/news-release_w_annex---ite-student-achievers-awards-2021.pdf?sfvrsn=874891c2_3</p>
+        </a>
+
+
+        <br>
+
+        <h5>Received Lee Kuan Yew Scholarship To Encourage Progression (LKY-STEP)</h5>
+        <div class="img-sch">
+            <a href="https://www.form.gov.sg/#!/61554df5d70fba001248ebe1">
+                <img src="achievements info/lky-step.png">
+                <p>Click on the image to visit the form for more details!</p>
             </a>
         </div>
 
         <br>
 
-        <h5>Mayflower Secondary School </h5>
+        <h5>Awarded ITE Outstanding Graduate Award (Nitec in Info-Comm Technology)</h5>
         <div class="img-sch">
-            <a href="https://mayflowersec.moe.edu.sg/">
-                <img src="school info/mfss.jpg">
-                <p>Click on the image to visit the school website!</p>
+            <a href="https://www.youtube.com/watch?v=c-DnIMLsLxI">
+                <img src="achievements info/outstanding grad award.jpg">
+                <p>Click on the image to visit the graduation ceremony video, jump to 58:13!</p>
             </a>
         </div>
 
         <br>
 
-        <h5>ITE College Central - Nitec in Infocomm Technology</h5>
+        <h5>Awarded ITE Top Graduate Award (School of Electronics and Info-Comm Technology)</h5>
         <div class="img-sch">
-            <a href="https://www.ite.edu.sg/colleges/ite-college-central/about-college-central">
-                <img src="school info/ite.jfif">
-                <p>Click on the image to visit the school website!</p>
+            <a href="https://www.youtube.com/watch?v=c-DnIMLsLxI">
+                <img src="achievements info/top grad award.jpg">
+                <p>Click on the image to listen to my speech, jump to 1:00:00!</p>
             </a>
         </div>
 
         <br>
 
-        <h5>Ngee Ann Poly</h5>
+        <h5>Awarded Harvard Prize Book (Singapore) 2020/21</h5>
         <div class="img-sch">
-            <a href="https://www.np.edu.sg/Pages/default.aspx?view=www">
-                <img src="school info/Ngee_Ann_Polytechnic_logo.svg.png">
-                <p>Click on the image to visit the school website!</p>
+            <a href="https://harvard.sg/harvard-prize-book/">
+                <img src="achievements info/harvard book prize award pic.PNG">
+                <p>Click on the image find out more about the award!</p>
             </a>
+        </div>
+
+        <br>
+
+        <h5>Awarded Yio Chu Kang Youth Community Leadership Award</h5>
+        <div class="img-sch">
+            <img src="achievements info/yckycla.jpg">
         </div>
 
     </div>
