--- a/Contact.html
+++ b/Contact.html
@@ -42,7 +42,27 @@
     </div>
 
     <div class="main-container">
-        <h3>Contact</h3>
+        <h3>Contact Details</h3>
+
+        <ol>
+            <li><strong>Balestier Hill Primary School</strong></li>
+            <p>(P1-P3 mid term)</p>
+
+            <li><strong>Ang Mo Kio Primary School</strong></li>
+            <p>(Graduated with PSLE score of 128.)</p>
+
+            <li><strong>Mayflower Secondary School</strong></li>
+            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
+
+            <li><strong>Nitec in Infocomm Technology</strong></li>
+            <p>(Graduated as top student and valedictorian of my cohort) </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.1 Common ICT Program </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.2 onwards Immersive Media</p>
+        </ol>
     </div>
 
 </body>
