--- a/Contact.html
+++ b/Contact.html
@@ -63,6 +63,17 @@
             <li><strong>Ngee Ann Poly</strong></li>
             <p>SEM 1.2 onwards Immersive Media</p>
         </ol>
+
+        <br>
+
+        <h5>Balestier Hill Primary School</h5>
+        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
+        <div class="img-sch">
+            <a href="https://bendemeerpri.moe.edu.sg/">
+                <img src="school info/bhps.png">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
     </div>
 
 </body>
