--- a/Contact.html
+++ b/Contact.html
@@ -45,35 +45,40 @@
         <h3>Contact Details</h3>
 
         <ol>
-            <li><strong>Balestier Hill Primary School</strong></li>
-            <p>(P1-P3 mid term)</p>
+            <a href="https://www.linkedin.com/in/aaroncye/">
+                <li><strong>LinkedIn</strong></li>
+                <p>https://www.linkedin.com/in/aaroncye/</p>
+            </a>
 
-            <li><strong>Ang Mo Kio Primary School</strong></li>
-            <p>(Graduated with PSLE score of 128.)</p>
+            <a href="https://github.com/Aaroncye">
+                <li><strong>GitHub</strong></li>
+                <p>https://github.com/Aaroncye</p>
+            </a>
 
-            <li><strong>Mayflower Secondary School</strong></li>
-            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
+            <a href="https://replit.com/@Aaroncye">
+                <li><strong>Replit</strong></li>
+                <p>https://replit.com/@Aaroncye</p>
+            </a>
 
-            <li><strong>Nitec in Infocomm Technology</strong></li>
-            <p>(Graduated as top student and valedictorian of my cohort) </p>
+            <a href="https://www.instagram.com/a.cyeee/">
+                <li><strong>Instagram</strong></li>
+                <p>https://www.instagram.com/a.cyeee/</p>
+            </a>
 
-            <li><strong>Ngee Ann Poly</strong></li>
-            <p>SEM 1.1 Common ICT Program </p>
-
-            <li><strong>Ngee Ann Poly</strong></li>
-            <p>SEM 1.2 onwards Immersive Media</p>
+            <a href="https://www.facebook.com/aaronchin29">
+                <li><strong>Facebook</strong></li>
+                <p>https://www.facebook.com/aaronchin29</p>
+            </a>
         </ol>
 
         <br>
 
-        <h5>Balestier Hill Primary School</h5>
-        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
-        <div class="img-sch">
-            <a href="https://bendemeerpri.moe.edu.sg/">
-                <img src="school info/bhps.png">
-                <p>Click on the image to visit the school website!</p>
-            </a>
-        </div>
+        <h5>My School Email </h5>
+        <p>For school purposes only</p>
+        <a href="mailto:s10219673@connect.np.edu.sg">
+            <p>Click on this text to send me an email!</p>
+        </a>
+    </div>
     </div>
 
 </body>
