--- a/Achievements.html
+++ b/Achievements.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+    <a name="top"></a>
     <div class="nav-wrapper">
         <!-- Link around dots-wrapper added after tutorial video -->
         <a href="index.html">
@@ -58,7 +59,6 @@
     <div class="main-container">
 
         <br>
-
         <h3>Achievements</h3>
 
         <ol>
@@ -183,6 +183,9 @@
             <img src="achievements info/yckycla.jpg">
         </div>
 
+        <br>
+
+        <a href="Achievements.html#top">Click to go back to the top</a>
     </div>
 
 </body>
