--- a/School.html
+++ b/School.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+    <a name="top"></a>
     <div class="nav-wrapper">
         <!-- Link around dots-wrapper added after tutorial video -->
         <a href="index.html">
@@ -58,7 +59,6 @@
     <div class="main-container">
 
         <br>
-
         <h3>Schools that I have gone to!</h3>
 
         <ol>
@@ -133,6 +133,8 @@
         </div>
 
     </div>
+    <br>
+    <a href="School.html#top">Click to go back to the top</a>
 
 </body>
 
