--- a/D+ App Icon.html
+++ b/D+ App Icon.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+
     <div class="nav-wrapper">
         <!-- Link around dots-wrapper added after tutorial video -->
         <a href="index.html">
@@ -44,6 +45,41 @@
 
     <div class="main-container">
         <h3>D+ APP ICON.</h3>
+
+        <br>
+
+        <h3>Schools that I have gone to!</h3>
+
+        <ol>
+            <li><strong>Balestier Hill Primary School</strong></li>
+            <p>(P1-P3 mid term)</p>
+
+            <li><strong>Ang Mo Kio Primary School</strong></li>
+            <p>(Graduated with PSLE score of 128.)</p>
+
+            <li><strong>Mayflower Secondary School</strong></li>
+            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
+
+            <li><strong>Nitec in Infocomm Technology</strong></li>
+            <p>(Graduated as top student and valedictorian of my cohort) </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.1 Common ICT Program </p>
+
+            <li><strong>Ngee Ann Poly</strong></li>
+            <p>SEM 1.2 onwards Immersive Media</p>
+        </ol>
+
+        <br>
+
+        <h5>Balestier Hill Primary School</h5>
+        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
+        <div class="img-sch">
+            <a href="https://bendemeerpri.moe.edu.sg/">
+                <img src="school info/bhps.png">
+                <p>Click on the image to visit the school website!</p>
+            </a>
+        </div>
     </div>
 
 </body>
