--- a/D+ App Icon.html
+++ b/D+ App Icon.html
@@ -16,71 +16,82 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type=text/css href="default.css">
+    <link id="theme-style" rel="stylesheet" type="text/css" href="default.css">
+
+
+    <style type="text/css">
+        .img-container {
+            max-width: 800px;
+        }
+        
+        .img-sch {
+            max-width: 200px;
+        }
+        
+        img {
+            width: 100%
+        }
+    </style>
 
 </head>
 
 <body>
+    <section class="s1">
+        <div class="main-container">
+            <div class="intro-wrapper">
+                <div class="nav-wrapper">
+                    <!-- Link around dots-wrapper added after tutorial video -->
+                    <a href="index.html">
+                        <div class="dots-wrapper">
+                            <div id="dot1" class="browser-dot"></div>
+                            <div id="dot2" class="browser-dot"></div>
+                            <div id="dot3" class="browser-dot"></div>
+                        </div>
 
-    <div class="nav-wrapper">
-        <!-- Link around dots-wrapper added after tutorial video -->
-        <a href="index.html">
-            <div class="dots-wrapper">
-                <div id="dot1" class="browser-dot"></div>
-                <div id="dot2" class="browser-dot"></div>
-                <div id="dot3" class="browser-dot"></div>
+                        <!--details on the top right to link to other pages later on-->
+                        <ul id="navigation">
+                            <li><a href="index.html">About-Me</a></li>
+                            <li><a href="School.html">School</a></li>
+                            <li><a href="Achievements.html">Achievements</a></li>
+                            <li><a href="Community.html">Community</a></li>
+                            <li><a href="Hobbies.html">Hobbies</a></li>
+                            <li><a href="Contact.html">Contact</a></li>
+                            <li><a href="index.html#contact">Get-in-Touch</a></li>
+
+                        </ul>
+                </div>
+                <div class="greeting-wrapper">
+                    <div class="left-column">
+                        <div class="img-sch">
+                            <h3>D+ APP ICON.</h3>
+                            <img src="projects info/DESIGN PRINCIPLES/D+ App Icon/d+icon.png">
+                            <p>The inspiration for this app icon was from Disney+, as you can see from the colors and design!</p>
+
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="right-column">
+                    <center><strong>Design Rationale</strong></center>
+
+                    <ol>
+                        <li>The issues I see in this app icon design, is that there is a lack of eye-catching elements.
+                        </li>
+                        <br>
+                        <li>I hope to accomplish this by making the “D” in Disney emphasized with the plus on its own.</li>
+                        <br>
+                        <li>This provides a clean and simple look that not only is aesthetically eye pleasing, but standouts out to the original smaller design of the Disney plus logo.
+                        </li>
+                        <br>
+                        <li>I have chosen to stick with the overall color theme as Disney plus visual identity is minimalist and strict, and its dark blue colour palette adds a sense of luxury and chic to the whole image, elevating the look of the simple-built
+                            emblem and its three elements.
+                        </li>
+                    </ol>
+                </div>
             </div>
-
-            <!--details on the top right to link to other pages later on-->
-            <ul id="navigation">
-                <li><a href="index.html">About-Me</a></li>
-                <li><a href="School.html">School</a></li>
-                <li><a href="Achievements.html">Achievements</a></li>
-                <li><a href="Community.html">Community</a></li>
-                <li><a href="Hobbies.html">Hobbies</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="index.html#contact">Get-in-Touch</a></li>
-
-            </ul>
-    </div>
-
-    <div class="main-container">
-        <h3>D+ APP ICON.</h3>
-
-        <br>
-
-        <h3>Schools that I have gone to!</h3>
-
-        <ol>
-            <li><strong>Balestier Hill Primary School</strong></li>
-            <p>(P1-P3 mid term)</p>
-
-            <li><strong>Ang Mo Kio Primary School</strong></li>
-            <p>(Graduated with PSLE score of 128.)</p>
-
-            <li><strong>Mayflower Secondary School</strong></li>
-            <p>(Graduated top of my class, and awared the Mayflowerian of the year of 2019)</p>
-
-            <li><strong>Nitec in Infocomm Technology</strong></li>
-            <p>(Graduated as top student and valedictorian of my cohort) </p>
-
-            <li><strong>Ngee Ann Poly</strong></li>
-            <p>SEM 1.1 Common ICT Program </p>
-
-            <li><strong>Ngee Ann Poly</strong></li>
-            <p>SEM 1.2 onwards Immersive Media</p>
-        </ol>
-
-        <br>
-
-        <h5>Balestier Hill Primary School</h5>
-        <p>In 2019, Bendemeer Primary School and Balestier Hill Primary School merged to form the new Bendemeer Primary School.</p>
-        <div class="img-sch">
-            <a href="https://bendemeerpri.moe.edu.sg/">
-                <img src="school info/bhps.png">
-                <p>Click on the image to visit the school website!</p>
-            </a>
-        </div>
-    </div>
+    </section>
+    <script type="text/javascript" src="script.js"></script>
 
 </body>
 
