--- a/D+ App Splash Page.html
+++ b/D+ App Splash Page.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    <a name="top"></a>
     <section class="s1">
         <div class="main-container">
             <div class="intro-wrapper">
@@ -63,33 +64,58 @@
                 <div class="greeting-wrapper">
                     <div class="left-column">
                         <div class="img-sch">
-                            <h3>D+ APP ICON.</h3>
-                            <img src="projects info/DESIGN PRINCIPLES/D+ App Icon/d+icon.png">
+                            <h3>D+ APP SPLASH PAGE</h3>
+                            <img src="projects info/DESIGN PRINCIPLES/D+ App Load Up Page/ASG 2 - SPLASH PAGE (FINAL) SCREENSHOT.PNG">
                             <p>The inspiration for this app icon was from Disney+, as you can see from the colors and design!</p>
-
                         </div>
                     </div>
                 </div>
-
 
                 <div class="right-column">
                     <center><strong>Design Rationale</strong></center>
 
                     <ol>
-                        <li>The issues I see in this app icon design, is that there is a lack of eye-catching elements.
+                        <li>The issues I see in this splash page design, I felt it lacked a more magical feel and a historic or relatable design element.
                         </li>
                         <br>
-                        <li>I hope to accomplish this by making the “D” in Disney emphasized with the plus on its own.</li>
-                        <br>
-                        <li>This provides a clean and simple look that not only is aesthetically eye pleasing, but standouts out to the original smaller design of the Disney plus logo.
+                        <li>To fit the theme of fantasy. I made use of Walt Disney’s Tagline and used Sparkles to give it an extra touch as well.
                         </li>
                         <br>
-                        <li>I have chosen to stick with the overall color theme as Disney plus visual identity is minimalist and strict, and its dark blue colour palette adds a sense of luxury and chic to the whole image, elevating the look of the simple-built
-                            emblem and its three elements.
+                        <li>Using the Mickey Mouse Clubhouse Colour Palette, the colours that are found in the logo are red, blue, green, yellow, white, and pink to represent Minnie mouse.
+                        </li>
+                        <br>
+                        <li>I also wanted to honour Mickey Mouse being the first Disney Character created.</li>
+                        <br>
+                        <li>For the background, I wanted a darker blue color which leads to a slightly lighter blue, hence, creates a gradient. As the blue on the original Disney+ splash page gradient ends with more of a whiter color.
+                        </li>
+                        <br>
+                        <li>The castle’s glowing effect from the light blue allows for the castle to pop, making it direct the consumers eyes to the center.
+                        </li>
+                        <br>
+                        <li>My meaning for the castle was to show the origin and to remind viewers how far Disney has come and to what we have today, Disney+, featuring content from various major film companies.
                         </li>
                     </ol>
                 </div>
             </div>
+    </section>
+
+    <section class="s2">
+        <div class="main-container">
+            <h5>Design Development - Part 1</h5>
+            <div class="img-container">
+                <img src="projects info/DESIGN PRINCIPLES/D+ App Load Up Page/part1.PNG">
+            </div>
+            <br>
+            <h5>Design Development - Part 2</h5>
+            <div class="img-container">
+                <img src="projects info/DESIGN PRINCIPLES/D+ App Load Up Page/part2.PNG">
+            </div>
+            <br>
+            <h5>Design Development - Part 3</h5>
+            <div class="img-container">
+                <img src="projects info/DESIGN PRINCIPLES/D+ App Load Up Page/part3.PNG">
+            </div>
+            <a href="D+ App Splash Page.html#top">Click to go back to the top</a>
     </section>
     <script type="text/javascript" src="script.js"></script>
 
