--- a/School.html
+++ b/School.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" type=text/css href="default.css">
 
     <style type="text/css">
@@ -49,7 +49,6 @@
                 <li><a href="index.html">About-Me</a></li>
                 <li><a href="School.html">School</a></li>
                 <li><a href="Achievements.html">Achievements</a></li>
-                <li><a href="Community.html">Community</a></li>
                 <li><a href="Hobbies.html">Hobbies</a></li>
                 <li><a href="Contact.html">Contact</a></li>
                 <li><a href="index.html#contact">Get-in-Touch</a></li>
