hobbies#top error

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -106,7 +106,7 @@
                 Your browser does not support the video tag.
             </video>
         </div>
-        <a href="hobbies.html#top">Click to go back to the top</a>
+        <a href="Hobbies.html#top">Click to go back to the top</a>
 
     </div>
 </body>
